Add annotation functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,12 @@ export(.translate_concentrations)
 export(analyze_data_dose_response)
 export(analyze_data_dose_response_concentrations)
 export(analyze_data_grouped)
+export(annotate_results_dr)
+export(annotate_results_gw)
+export(classify_peptide_protein_hits)
 export(import_data_long)
 export(import_data_wide)
+export(mutate_peptide_position)
 export(prefilter_data_dose_response)
 export(process_data_dose_response)
 export(process_data_dose_response_m)
