--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(analyze_data_grouped)
 export(annotate_results_dr)
 export(annotate_results_gw)
 export(classify_peptide_protein_hits)
+export(get_UniProt_data)
+export(get_UniProt_data_1o)
 export(import_data_long)
 export(import_data_wide)
 export(mutate_peptide_position)
